# airfoils

./: pyproject.toml
src/airfoils/: airfoils.py
